--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Saumen Biswas, Senior Software Developer specializing in test automation and quality assurance.">
+    <meta name="keywords" content="Saumen Biswas, software developer, test automation, quality assurance, fintech, programming, Python, Typescript, Playwright, Selenium, Appium, CI/CD">
+    <meta name="author" content="Saumen Biswas">
     <title>Saumen Biswas | Senior Software Developer</title>
     <style>
         body {
