--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         ul li {
             margin: 0.5rem 0;
         }
+        .project-img {
+            width: 100%;
+            height: auto;
+            margin: 1rem 0;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +77,7 @@
         <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
+        <a href="#blog">Blog</a>
         <a href="#resources">Resources</a>
         <a href="#education">Education</a>
     </nav>
@@ -118,8 +124,23 @@
     <section id="projects" class="container">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Test Automation Framework Development:</strong> Reduced manual testing by 40% and increased test coverage by 30%.</li>
-            <li><strong>Engineering Productivity Suite:</strong> Implemented solutions improving code review cycle time by 25%.</li>
+            <li><strong>Test Automation Framework Development:</strong> Reduced manual testing by 40% and increased test coverage by 30%.
+                <br><img src="project1.jpg" alt="Automation Framework" class="project-img">
+            </li>
+            <li><strong>Engineering Productivity Suite:</strong> Implemented solutions improving code review cycle time by 25%.
+                <br><img src="project2.jpg" alt="Productivity Suite" class="project-img">
+            </li>
+        </ul>
+    </section>
+
+    <section id="blog" class="container">
+        <h2>Blog</h2>
+        <p>Explore my latest insights on test automation, quality assurance, and fintech technologies:</p>
+        <ul>
+            <li><a href="#">The Role of AI in Test Automation</a></li>
+            <li><a href="#">Top 5 Strategies to Optimize CI/CD Pipelines</a></li>
+            <li><a href="#">Best Practices for Flaky Test Management</a></li>
+            <li><a href="#">How Fintech Innovations are Improving Test Quality</a></li>
         </ul>
     </section>
 
