--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     <section id="skills" class="container">
         <h2>Skills</h2>
         <ul>
-            <li>Programming Languages: Python, Typescript, C#</li>
-            <li>Automation Tools: Playwright, Selenium, Appium, Behave (BDD), Cucumber</li>
-            <li>Testing Tools: Postman, TestRail</li>
-            <li>CI/CD: Jenkins, Git</li>
-            <li>Platforms: iOS, Android, macOS, Windows</li>
-            <li>Others: API Testing, Machine Learning, Cloud Technologies</li>
+            <li><strong>Programming Languages:</strong> Python, Typescript, C#</li>
+            <li><strong>Automation Tools:</strong> Playwright, Selenium, Appium, Behave (BDD), Cucumber</li>
+            <li><strong>Testing Tools:</strong> Postman, TestRail</li>
+            <li><strong>CI/CD:</strong> Jenkins, Git</li>
+            <li><strong>Platforms:</strong> iOS, Android, macOS, Windows</li>
+            <li><strong>Others:</strong> API Testing, Machine Learning, Cloud Technologies</li>
         </ul>
     </section>
 
