--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
         </ul>
     </section>
 
+    <section id="projects" class="container">
+        <h2>Projects</h2>
+        <ul>
+            <li><strong>Test Automation Framework Development:</strong> Reduced manual testing by 40% and increased test coverage by 30%.
+                <br><img src="project1.jpg" alt="Automation Framework" class="project-img">
+            </li>
+            <li><strong>Engineering Productivity Suite:</strong> Implemented solutions improving code review cycle time by 25%.
+                <br><img src="project2.jpg" alt="Productivity Suite" class="project-img">
+            </li>
+        </ul>
+    </section>
+
     <section id="experience" class="container">
         <h2>Experience</h2>
         <ul>
@@ -118,17 +130,12 @@
                     <li>Architected automation frameworks for mission-critical systems, increasing test coverage by 30%.</li>
                 </ul>
             </li>
-        </ul>
-    </section>
-
-    <section id="projects" class="container">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Test Automation Framework Development:</strong> Reduced manual testing by 40% and increased test coverage by 30%.
-                <br><img src="project1.jpg" alt="Automation Framework" class="project-img">
-            </li>
-            <li><strong>Engineering Productivity Suite:</strong> Implemented solutions improving code review cycle time by 25%.
-                <br><img src="project2.jpg" alt="Productivity Suite" class="project-img">
+            <li><strong>Senior Software Engineer</strong> - R S Software (2007–2014)
+                <ul>
+                    <li>Designed and implemented robust testing frameworks for backend fintech systems, improving test efficiency by 35%.</li>
+                    <li>Led quality assurance efforts for high-profile payment processing projects, ensuring compliance with industry standards.</li>
+                    <li>Delivered scalable and secure software solutions in collaboration with global teams.</li>
+                </ul>
             </li>
         </ul>
     </section>
