--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <nav>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
-        <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#education">Education</a>
         <a href="#blog">Blog</a>
         <a href="#resources">Resources</a>
-        <a href="#education">Education</a>
     </nav>
 
     <section id="about" class="container">
@@ -95,6 +95,7 @@
             <li><strong>Testing Tools:</strong> Postman, TestRail</li>
             <li><strong>CI/CD:</strong> Jenkins, Git</li>
             <li><strong>Platforms:</strong> iOS, Android, macOS, Windows</li>
+            <li><strong>Project Management:</strong> Scrum, Kanban, SAFe, Agile methodologies</li>
             <li><strong>Others:</strong> API Testing, Machine Learning, Cloud Technologies</li>
         </ul>
     </section>
@@ -140,6 +141,15 @@
         </ul>
     </section>
 
+    <section id="education" class="container">
+        <h2>Education & Certifications</h2>
+        <ul>
+            <li>M.S. in IT Management - Western Governors University (2020)</li>
+            <li>B.S. in Electrical Engineering - West Bengal University of Technology (2005)</li>
+            <li>Certifications: CSM, CTFL, CAPM, Machine Learning Certification</li>
+        </ul>
+    </section>
+
     <section id="blog" class="container">
         <h2>Blog</h2>
         <p>Explore my latest insights on test automation, quality assurance, and fintech technologies:</p>
@@ -158,15 +168,6 @@
             <li><a href="#">Optimizing Test Prioritization Strategies</a></li>
             <li><a href="#">Leveraging Machine Learning for Quality Assurance</a></li>
             <li><a href="#">Reducing Flakiness in Test Automation Frameworks</a></li>
-        </ul>
-    </section>
-
-    <section id="education" class="container">
-        <h2>Education & Certifications</h2>
-        <ul>
-            <li>M.S. in IT Management - Western Governors University (2020)</li>
-            <li>B.S. in Electrical Engineering - West Bengal University of Technology (2005)</li>
-            <li>Certifications: CSM, CTFL, CAPM, Machine Learning Certification</li>
         </ul>
     </section>
 
