--- a/index.html
+++ b/index.html
@@ -103,11 +103,17 @@
     <section id="projects" class="container">
         <h2>Projects</h2>
         <ul>
-            <li><strong>Test Automation Framework Development:</strong> Reduced manual testing by 40% and increased test coverage by 30%.
-                <br><img src="project1.jpg" alt="Automation Framework" class="project-img">
+            <li><strong>Test Automation Framework Development:</strong>
+                <p>Architected and implemented comprehensive automation frameworks for both frontend and backend applications, reducing manual testing time by 40% and increasing test coverage by 30%. Integrated CI/CD pipelines, enabling faster and more reliable release cycles.</p>
+                <img src="project1.jpg" alt="Automation Framework" class="project-img">
             </li>
-            <li><strong>Engineering Productivity Suite:</strong> Implemented solutions improving code review cycle time by 25%.
-                <br><img src="project2.jpg" alt="Productivity Suite" class="project-img">
+            <li><strong>Engineering Productivity Enhancement Suite:</strong>
+                <p>Developed custom workflows to streamline the development process, reducing code review time by 25%. Implemented advanced linters and static analysis tools, reducing code defects by 35%. Created a flaky test management solution, reducing flakiness by 50%.</p>
+                <img src="project2.jpg" alt="Productivity Suite" class="project-img">
+            </li>
+            <li><strong>Intelligent Test Prioritization System:</strong>
+                <p>Designed and developed a ranking system to prioritize test scenarios, optimizing CI/CD efficiency. Achieved a 60% reduction in critical bug escapes and a 25% decrease in overall test execution time.</p>
+                <img src="project3.jpg" alt="Test Prioritization System" class="project-img">
             </li>
         </ul>
     </section>
