--- a/index.html
+++ b/index.html
@@ -150,9 +150,13 @@
     <section id="education" class="container">
         <h2>Education & Certifications</h2>
         <ul>
-            <li>M.S. in IT Management - Western Governors University (2020)</li>
-            <li>B.S. in Electrical Engineering - West Bengal University of Technology (2005)</li>
-            <li>Certifications: CSM, CTFL, CAPM, Machine Learning Certification</li>
+            <li><strong>M.S. in IT Management</strong> - Western Governors University (2020)</li>
+            <li><strong>B.S. in Electrical Engineering</strong> - West Bengal University of Technology (2005)</li>
+            <li><strong>Certified Associate in Project Management (CAPM):</strong> Project Management Institute (PMI), 2020</li>
+            <li><strong>Project Leadership, Management, and Communications:</strong> Strategy Execution, 2018</li>
+            <li><strong>Machine Learning Certification:</strong> Stanford University on Coursera, 2018</li>
+            <li><strong>Certified Scrum Master (CSM):</strong> Scrum Alliance, 2016</li>
+            <li><strong>Certified Tester Foundation Level (CTFL):</strong> ASTQB, 2015</li>
         </ul>
     </section>
 
