--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             padding: 1rem 0;
             text-align: center;
         }
+        header img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            margin-top: 1rem;
+        }
         nav {
             display: flex;
             justify-content: center;
@@ -67,6 +74,7 @@
 </head>
 <body>
     <header>
+        <img src="Profile_Picture.JPG" alt="Saumen Biswas Profile Picture">
         <h1>Saumen Biswas</h1>
         <p>Senior Software Developer | Test Automation Specialist</p>
         <p><a href="mailto:saubiswa1@gmail.com" style="color: white;">Email Me</a> | <a href="https://www.linkedin.com/in/saumenbiswas/" target="_blank" style="color: white;">LinkedIn</a></p>
@@ -105,15 +113,12 @@
         <ul>
             <li><strong>Test Automation Framework Development:</strong>
                 <p>Architected and implemented comprehensive automation frameworks for both frontend and backend applications, reducing manual testing time by 40% and increasing test coverage by 30%. Integrated CI/CD pipelines, enabling faster and more reliable release cycles.</p>
-                <img src="project1.jpg" alt="Automation Framework" class="project-img">
             </li>
             <li><strong>Engineering Productivity Enhancement Suite:</strong>
                 <p>Developed custom workflows to streamline the development process, reducing code review time by 25%. Implemented advanced linters and static analysis tools, reducing code defects by 35%. Created a flaky test management solution, reducing flakiness by 50%.</p>
-                <img src="project2.jpg" alt="Productivity Suite" class="project-img">
             </li>
             <li><strong>Intelligent Test Prioritization System:</strong>
                 <p>Designed and developed a ranking system to prioritize test scenarios, optimizing CI/CD efficiency. Achieved a 60% reduction in critical bug escapes and a 25% decrease in overall test execution time.</p>
-                <img src="project3.jpg" alt="Test Prioritization System" class="project-img">
             </li>
         </ul>
     </section>
