--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Saumen Biswas, Senior Software Developer specializing in test automation and quality assurance.">
-    <meta name="keywords" content="Saumen Biswas, software developer, test automation, quality assurance, fintech, programming, Python, Typescript, Playwright, Selenium, Appium, CI/CD">
+    <meta name="description" content="Portfolio of Saumen Biswas, Senior Software Engineer specializing in test automation and quality assurance.">
+    <meta name="keywords" content="Saumen Biswas, software engineer, test automation, quality assurance, fintech, programming, Python, Typescript, Playwright, Selenium, Appium, CI/CD">
     <meta name="author" content="Saumen Biswas">
-    <title>Saumen Biswas | Senior Software Developer</title>
+    <title>Saumen Biswas | Senior Software Engineer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -76,79 +76,104 @@
     <header>
         <img src="Profile_Picture.JPG" alt="Saumen Biswas Profile Picture">
         <h1>Saumen Biswas</h1>
-        <p>Senior Software Developer | Test Automation Specialist</p>
+        <p>Senior Software Engineer | Test Automation Specialist</p>
         <p><a href="mailto:saubiswa1@gmail.com" style="color: white;">Email Me</a> | <a href="https://www.linkedin.com/in/saumenbiswas/" target="_blank" style="color: white;">LinkedIn</a></p>
     </header>
 
     <nav>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
+        <a href="#certification">Certification</a>
         <a href="#education">Education</a>
         <a href="#blog">Blog</a>
         <a href="#resources">Resources</a>
     </nav>
 
     <section id="about" class="container">
-        <h2>About Me</h2>
-        <p>Innovative and results-driven Software Engineering Leader with extensive experience in designing and implementing cutting-edge test automation solutions, robust tools, and scalable frameworks. Proven track record of enhancing software quality and boosting engineering productivity across diverse platforms.</p>
+        <h2>Professional Summary</h2>
+        <p>Results-driven Senior Software Developer in Test with 15+ years of experience in test automation, CI/CD optimization, and engineering productivity enhancement. Expertise in building scalable automation frameworks, reducing build times, and enhancing software reliability. Proven ability to lead cross-functional, globally distributed teams to drive innovation, improve code quality, and optimize cloud infrastructure. Passionate about game development, accessibility testing, and continuous delivery pipelines, making PlayStation the perfect place to apply my expertise.</p>
     </section>
 
     <section id="skills" class="container">
-        <h2>Skills</h2>
+        <h2>Technical Skills</h2>
         <ul>
-            <li><strong>Programming Languages:</strong> Python, Typescript, C#</li>
-            <li><strong>Automation Tools:</strong> Playwright, Selenium, Appium, Behave (BDD), Cucumber</li>
-            <li><strong>Testing Tools:</strong> Postman, TestRail</li>
-            <li><strong>CI/CD:</strong> Jenkins, Git</li>
-            <li><strong>Platforms:</strong> iOS, Android, macOS, Windows</li>
-            <li><strong>Project Management:</strong> Scrum, Kanban, SAFe, Agile methodologies</li>
-            <li><strong>Others:</strong> API Testing, Machine Learning, Cloud Technologies</li>
-        </ul>
-    </section>
-
-    <section id="projects" class="container">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Test Automation Framework Development:</strong>
-                <p>Architected and implemented comprehensive automation frameworks for both frontend and backend applications, reducing manual testing time by 40% and increasing test coverage by 30%. Integrated CI/CD pipelines, enabling faster and more reliable release cycles.</p>
-            </li>
-            <li><strong>Engineering Productivity Enhancement Suite:</strong>
-                <p>Developed custom workflows to streamline the development process, reducing code review time by 25%. Implemented advanced linters and static analysis tools, reducing code defects by 35%. Created a flaky test management solution, reducing flakiness by 50%.</p>
-            </li>
-            <li><strong>Intelligent Test Prioritization System:</strong>
-                <p>Designed and developed a ranking system to prioritize test scenarios, optimizing CI/CD efficiency. Achieved a 60% reduction in critical bug escapes and a 25% decrease in overall test execution time.</p>
-            </li>
+            <li><strong>Test Automation & CI/CD:</strong> Selenium, Appium, Playwright, Cucumber, Behave, PyTest</li>
+            <li><strong>Programming:</strong> Python, TypeScript, C#, Bash</li>
+            <li><strong>DevOps:</strong> Git, Jenkins</li>
+            <li><strong>API Testing:</strong> Postman, REST Assured, GraphQL, Swagger</li>
+            <li><strong>Accessibility Testing:</strong> WCAG Compliance, Lighthouse</li>
+            <li><strong>Agile & Quality Engineering:</strong> TDD, BDD, Scrum, SAFe, Kanban</li>
+            <li><strong>Machine Learning in QA:</strong> Predictive defect analysis, Test selection algorithms</li>
         </ul>
     </section>
 
     <section id="experience" class="container">
-        <h2>Experience</h2>
+        <h2>Professional Experience</h2>
         <ul>
-            <li><strong>Senior Software Developer in Test</strong> - Upstart (2022–Present)
+            <li><strong>Senior Software Developer in Test | Upstart, San Mateo, CA | 04/2022 - Present
                 <ul>
-                    <li>Designed and implemented scalable test automation frameworks, enhancing testing efficiency by 40%.</li>
-                    <li>Developed an Intelligent Test Prioritization System, reducing critical bug escapes by 60%.</li>
+                    <li>Architected an End-to-End Test Automation Framework, reducing manual testing efforts by 40% and increasing test coverage by 30%.</li>
+                    <li>Led AWS Cloud Cost Optimization initiative, achieving $1.4M in annual savings without compromising performance.</li>
+                    <li>Designed Smart Test Selection System, reducing build time by 60% by prioritizing critical test cases using ML-driven analysis.</li>
+                    <li>Collaborated with globally distributed teams to enhance CI/CD efficiency, reducing deployment cycle time by 35%.</li>
                 </ul>
             </li>
-            <li><strong>Senior Software Engineer</strong> - Teladoc (2020–2022)
+            <li><strong>Senior Software Engineer | Teladoc, Mountain View, CA | 11/2020 - 03/2022
                 <ul>
-                    <li>Developed scalable test automation frameworks, increasing test coverage by 30%.</li>
+                    <li>Spearheaded test automation for health technology platforms, increasing automation coverage by 30%.</li>
+                    <li>Implemented quality metrics tracking, reducing post-release defects by 25% and improving release stability.</li>
                 </ul>
             </li>
-            <li><strong>Senior Staff Software Engineer</strong> - Visa Inc. (2014–2020)
+            <li><strong>Senior Staff Software Engineer | Visa Inc., Foster City, CA | 12/2014 - 10/2020
                 <ul>
-                    <li>Architected automation frameworks for mission-critical systems, increasing test coverage by 30%.</li>
+                    <li>Led testing efforts for Apple Pay integration, managing cross-functional teams and ensuring seamless transaction processing.</li>
+                    <li>Developed Test Ranking System (TWIK) using ML algorithms, reducing test execution time by 25%.</li>
+                    <li>Pioneered the Auth24x7 Regression Testing Framework, eliminating human errors and reducing operational costs by 20%.</li>
                 </ul>
             </li>
-            <li><strong>Senior Software Engineer</strong> - R S Software (2007–2014)
+            <li><strong>Senior Software Engineer | R S Software (India) Ltd., Kolkata, India | 03/2007 - 11/2014
                 <ul>
-                    <li>Designed and implemented robust testing frameworks for backend fintech systems, improving test efficiency by 35%.</li>
-                    <li>Led quality assurance efforts for high-profile payment processing projects, ensuring compliance with industry standards.</li>
-                    <li>Delivered scalable and secure software solutions in collaboration with global teams.</li>
+                    <li>Built robust backend fintech automation frameworks, improving efficiency by 35%.</li>
+                    <li>Ensured strict compliance with international security and payment processing standards.</li>
                 </ul>
             </li>
+        </ul>
+    </section>
+
+    <section id="projects" class="container">
+        <h2>Key Projects & Achievements</h2>
+        <ul>
+            <li><strong>Test Automation Framework Development</strong>
+                <ul>
+                    <li>Architected comprehensive cross-platform automation frameworks, reducing manual efforts by 40%.</li>
+                    <li>Integrated CI/CD pipelines with automated testing, accelerating software release cycles.</li>
+                </ul>
+            </li>
+            <li><strong>Engineering Productivity Enhancement Suite</strong>
+                <ul>
+                    <li>Reduced test flakiness by 50% through advanced flaky test management.</li>
+                    <li>Improved test efficiency by 70% with PR tracking automation and static analysis tools.</li>
+                </ul>
+            </li>
+            <li><strong>Intelligent Test Prioritization System</strong>
+                <ul>
+                    <li>Designed ML-driven ranking system optimizing test execution efficiency, reducing bug escapes by 60%.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section id="certification" class="container">
+        <h2>Certifications & Professional Memberships</h2>
+        <ul>
+            <li><strong>Certified Associate in Project Management (CAPM)</strong> – PMI (2020)</li>
+            <li><strong>Certified Scrum Master (CSM)</strong> – Scrum Alliance (2016)</li>
+            <li><strong>Certified Tester, Foundation Level (CTFL)</strong> – ASTQB (2015)</li>
+            <li><strong>Machine Learning Certification</strong> – Stanford University (2018)</li>
+            <li><strong>Project Leadership, Management, and Communications</strong> – Strategy Execution (2018)</li>
+            <li><strong>Memberships: Fellow</strong> - IETE, SAS | <strong>Senior Member</strong> – IEEE | <strong>Member</strong> – PMI, Scrum Alliance, ASTQB</li>
         </ul>
     </section>
 
