--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section id="experience" class="container">
         <h2>Professional Experience</h2>
         <ul>
-            <li><strong>Senior Software Developer in Test | Upstart, San Mateo, CA | 04/2022 - Present
+            <li><strong>Senior Software Developer in Test | Upstart, San Mateo, CA | 04/2022 - Present</strong>
                 <ul>
                     <li>Architected an End-to-End Test Automation Framework, reducing manual testing efforts by 40% and increasing test coverage by 30%.</li>
                     <li>Led AWS Cloud Cost Optimization initiative, achieving $1.4M in annual savings without compromising performance.</li>
@@ -120,20 +120,20 @@
                     <li>Collaborated with globally distributed teams to enhance CI/CD efficiency, reducing deployment cycle time by 35%.</li>
                 </ul>
             </li>
-            <li><strong>Senior Software Engineer | Teladoc, Mountain View, CA | 11/2020 - 03/2022
+            <li><strong>Senior Software Engineer | Teladoc, Mountain View, CA | 11/2020 - 03/2022</strong>
                 <ul>
                     <li>Spearheaded test automation for health technology platforms, increasing automation coverage by 30%.</li>
                     <li>Implemented quality metrics tracking, reducing post-release defects by 25% and improving release stability.</li>
                 </ul>
             </li>
-            <li><strong>Senior Staff Software Engineer | Visa Inc., Foster City, CA | 12/2014 - 10/2020
+            <li><strong>Senior Staff Software Engineer | Visa Inc., Foster City, CA | 12/2014 - 10/2020</strong>
                 <ul>
                     <li>Led testing efforts for Apple Pay integration, managing cross-functional teams and ensuring seamless transaction processing.</li>
                     <li>Developed Test Ranking System (TWIK) using ML algorithms, reducing test execution time by 25%.</li>
                     <li>Pioneered the Auth24x7 Regression Testing Framework, eliminating human errors and reducing operational costs by 20%.</li>
                 </ul>
             </li>
-            <li><strong>Senior Software Engineer | R S Software (India) Ltd., Kolkata, India | 03/2007 - 11/2014
+            <li><strong>Senior Software Engineer | R S Software (India) Ltd., Kolkata, India | 03/2007 - 11/2014</strong>
                 <ul>
                     <li>Built robust backend fintech automation frameworks, improving efficiency by 35%.</li>
                     <li>Ensured strict compliance with international security and payment processing standards.</li>
