--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
         <a href="#certification">Certification</a>
+        <a href="#awards">Awards</a>
         <a href="#education">Education</a>
-        <a href="#blog">Blog</a>
-        <a href="#resources">Resources</a>
+        <a href="#articles">Articles</a>
     </nav>
 
     <section id="about" class="container">
@@ -177,37 +177,29 @@
         </ul>
     </section>
 
+    <section id="awards" class="container">
+        <h2>Awards & Recognitions</h2>
+        <ul>
+            <li><strong>Editorial Board Member</strong>: IJSPQM, JST</li>
+            <li><strong>Judge</strong>: Globee Awards</li>
+            <li><strong>Visa Go Beyond</strong>: Expand Access 2019 & Innovation 2017</li>
+        </ul>
+    </section>
+
     <section id="education" class="container">
-        <h2>Education & Certifications</h2>
+        <h2>Education</h2>
         <ul>
             <li><strong>M.S. in IT Management</strong> - Western Governors University (2020)</li>
             <li><strong>B.S. in Electrical Engineering</strong> - West Bengal University of Technology (2005)</li>
-            <li><strong>Certified Associate in Project Management (CAPM):</strong> Project Management Institute (PMI), 2020</li>
-            <li><strong>Project Leadership, Management, and Communications:</strong> Strategy Execution, 2018</li>
-            <li><strong>Machine Learning Certification:</strong> Stanford University on Coursera, 2018</li>
-            <li><strong>Certified Scrum Master (CSM):</strong> Scrum Alliance, 2016</li>
-            <li><strong>Certified Tester Foundation Level (CTFL):</strong> ASTQB, 2015</li>
         </ul>
     </section>
 
-    <section id="blog" class="container">
-        <h2>Blog</h2>
-        <p>Explore my latest insights on test automation, quality assurance, and fintech technologies:</p>
+    <section id="articles" class="container">
+        <h2>Published Articles</h2>
         <ul>
-            <li><a href="#">The Role of AI in Test Automation</a></li>
-            <li><a href="#">Top 5 Strategies to Optimize CI/CD Pipelines</a></li>
-            <li><a href="#">Best Practices for Flaky Test Management</a></li>
-            <li><a href="#">How Fintech Innovations are Improving Test Quality</a></li>
-        </ul>
-    </section>
-
-    <section id="resources" class="container">
-        <h2>Published Articles & White Papers</h2>
-        <ul>
-            <li><a href="#">Improving CI/CD Pipelines with Test Automation</a></li>
-            <li><a href="#">Optimizing Test Prioritization Strategies</a></li>
-            <li><a href="#">Leveraging Machine Learning for Quality Assurance</a></li>
-            <li><a href="#">Reducing Flakiness in Test Automation Frameworks</a></li>
+            <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_FEBRUARY2025/IJMIE4Feb25.pdf">Strategic Cost Management for Cloud-Native Software Development</a></li>
+            <li><a href="#">Predictive Metrics: Transforming Engineering Productivity and Software Quality</a></li>
+            <li><a href="#">Leveraging Machine Learning for Advanced Automation Testing</a></li>
         </ul>
     </section>
 
