--- a/index.html
+++ b/index.html
@@ -7,88 +7,27 @@
     <meta name="keywords" content="Saumen Biswas, software engineer, test automation, quality assurance, fintech, programming, Python, Typescript, Playwright, Selenium, Appium, CI/CD">
     <meta name="author" content="Saumen Biswas">
     <title>Saumen Biswas | Senior Software Engineer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        header img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-            margin-top: 1rem;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #444;
-            padding: 0.5rem 0;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 1rem;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        section {
-            padding: 2rem;
-        }
-        h2 {
-            color: #333;
-        }
-        .container {
-            max-width: 1100px;
-            margin: auto;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            margin: 0.5rem 0;
-        }
-        .project-img {
-            width: 100%;
-            height: auto;
-            margin: 1rem 0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <img src="Profile_Picture.JPG" alt="Saumen Biswas Profile Picture">
+        <img src="images/Profile_Picture.JPG" alt="Saumen Biswas Profile Picture">
         <h1>Saumen Biswas</h1>
         <p>Senior Software Engineer | Test Automation Specialist</p>
         <p><a href="mailto:saubiswa1@gmail.com" style="color: white;">Email Me</a> | <a href="https://www.linkedin.com/in/saumenbiswas/" target="_blank" style="color: white;">LinkedIn</a></p>
     </header>
 
     <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#certification">Certification</a>
-        <a href="#awards">Awards</a>
-        <a href="#education">Education</a>
-        <a href="#articles">Articles</a>
+        <a href="#about"><i class="fas fa-user"></i> About</a>
+        <a href="#skills"><i class="fas fa-tools"></i> Skills</a>
+        <a href="#experience"><i class="fas fa-briefcase"></i> Experience</a>
+        <a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a>
+        <a href="#certification"><i class="fas fa-certificate"></i> Certification</a>
+        <a href="#awards"><i class="fas fa-award"></i> Awards</a>
+        <a href="#education"><i class="fas fa-graduation-cap"></i> Education</a>
+        <a href="#articles"><i class="fas fa-newspaper"></i> Articles</a>
     </nav>
 
     <section id="about" class="container">
@@ -126,85 +65,5 @@
                     <li>Implemented quality metrics tracking, reducing post-release defects by 25% and improving release stability.</li>
                 </ul>
             </li>
-            <li><strong>Senior Staff Software Engineer | Visa Inc., Foster City, CA | 12/2014 - 10/2020</strong>
-                <ul>
-                    <li>Led testing efforts for Apple Pay integration, managing cross-functional teams and ensuring seamless transaction processing.</li>
-                    <li>Developed Test Ranking System (TWIK) using ML algorithms, reducing test execution time by 25%.</li>
-                    <li>Pioneered the Auth24x7 Regression Testing Framework, eliminating human errors and reducing operational costs by 20%.</li>
-                </ul>
-            </li>
-            <li><strong>Senior Software Engineer | R S Software (India) Ltd., Kolkata, India | 03/2007 - 11/2014</strong>
-                <ul>
-                    <li>Built robust backend fintech automation frameworks, improving efficiency by 35%.</li>
-                    <li>Ensured strict compliance with international security and payment processing standards.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section id="projects" class="container">
-        <h2>Key Projects & Achievements</h2>
-        <ul>
-            <li><strong>Test Automation Framework Development</strong>
-                <ul>
-                    <li>Architected comprehensive cross-platform automation frameworks, reducing manual efforts by 40%.</li>
-                    <li>Integrated CI/CD pipelines with automated testing, accelerating software release cycles.</li>
-                </ul>
-            </li>
-            <li><strong>Engineering Productivity Enhancement Suite</strong>
-                <ul>
-                    <li>Reduced test flakiness by 50% through advanced flaky test management.</li>
-                    <li>Improved test efficiency by 70% with PR tracking automation and static analysis tools.</li>
-                </ul>
-            </li>
-            <li><strong>Intelligent Test Prioritization System</strong>
-                <ul>
-                    <li>Designed ML-driven ranking system optimizing test execution efficiency, reducing bug escapes by 60%.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
-
-    <section id="certification" class="container">
-        <h2>Certifications & Professional Memberships</h2>
-        <ul>
-            <li><strong>Certified Associate in Project Management (CAPM)</strong> – PMI (2020)</li>
-            <li><strong>Certified Scrum Master (CSM)</strong> – Scrum Alliance (2016)</li>
-            <li><strong>Certified Tester, Foundation Level (CTFL)</strong> – ASTQB (2015)</li>
-            <li><strong>Machine Learning Certification</strong> – Stanford University (2018)</li>
-            <li><strong>Project Leadership, Management, and Communications</strong> – Strategy Execution (2018)</li>
-            <li><strong>Memberships: Fellow</strong> - IETE, SAS | <strong>Senior Member</strong> – IEEE | <strong>Member</strong> – PMI, Scrum Alliance, ASTQB</li>
-        </ul>
-    </section>
-
-    <section id="awards" class="container">
-        <h2>Awards & Recognitions</h2>
-        <ul>
-            <li><strong>Editorial Board Member</strong>: IJSPQM, JST</li>
-            <li><strong>Judge</strong>: Globee Awards</li>
-            <li><strong>Visa Go Beyond</strong>: Expand Access 2019 & Innovation 2017</li>
-        </ul>
-    </section>
-
-    <section id="education" class="container">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>M.S. in IT Management</strong> - Western Governors University (2020)</li>
-            <li><strong>B.S. in Electrical Engineering</strong> - West Bengal University of Technology (2005)</li>
-        </ul>
-    </section>
-
-    <section id="articles" class="container">
-        <h2>Published Articles</h2>
-        <ul>
-            <li><a href="https://www.ijmra.us/project%20doc/2025/IJME_FEBRUARY2025/IJMIE4Feb25.pdf">Strategic Cost Management for Cloud-Native Software Development</a></li>
-            <li><a href="#">Predictive Metrics: Transforming Engineering Productivity and Software Quality</a></li>
-            <li><a href="#">Leveraging Machine Learning for Advanced Automation Testing</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Saumen Biswas. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+            <li><strong>Senior Staff
+::contentReference[oaicite:1]{index=1}
