--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <p><a href="mailto:saubiswa1@gmail.com" style="color: white;">Email Me</a> | <a href="https://www.linkedin.com/in/saumenbiswas/" target="_blank" style="color: white;">LinkedIn</a></p>
     </header>
 
-    <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#certification">Certification</a>
-        <a href="#awards">Awards</a>
-        <a href="#education">Education</a>
-        <a href="#articles">Articles</a>
-    </nav>
+<nav>
+    <a href="#about"><i class="fas fa-user"></i> About</a>
+    <a href="#skills"><i class="fas fa-tools"></i> Skills</a>
+    <a href="#experience"><i class="fas fa-briefcase"></i> Experience</a>
+    <a href="#projects"><i class="fas fa-project-diagram"></i> Projects</a>
+    <a href="#certification"><i class="fas fa-certificate"></i> Certification</a>
+    <a href="#awards"><i class="fas fa-award"></i> Awards</a>
+    <a href="#education"><i class="fas fa-graduation-cap"></i> Education</a>
+    <a href="#articles"><i class="fas fa-newspaper"></i> Articles</a>
+</nav>
 
     <section id="about" class="container">
         <h2>Professional Summary</h2>
