--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="about" class="container">
         <h2>Professional Summary</h2>
-        <p>Results-driven Senior Software Developer in Test with 15+ years of experience in test automation, CI/CD optimization, and engineering productivity enhancement. Expertise in building scalable automation frameworks, reducing build times, and enhancing software reliability. Proven ability to lead cross-functional, globally distributed teams to drive innovation, improve code quality, and optimize cloud infrastructure. Passionate about game development, accessibility testing, and continuous delivery pipelines, making PlayStation the perfect place to apply my expertise.</p>
+        <p>Results-driven <strong>Senior Software Developer</strong> in Test with 15+ years of experience in <strong>test automation, CI/CD optimization, and engineering productivity</strong> enhancement. Expertise in building scalable automation frameworks, reducing build times, and enhancing software reliability. Proven ability to lead cross-functional, globally distributed teams to drive innovation, improve code quality, and optimize cloud infrastructure. Passionate about game development, accessibility testing, and continuous delivery pipelines, making PlayStation the perfect place to apply my expertise.</p>
     </section>
 
     <section id="skills" class="container">
@@ -52,29 +52,29 @@
         <ul>
             <li><strong>Senior Software Developer in Test | Upstart, San Mateo, CA | 04/2022 - Present</strong>
                 <ul>
-                    <li>Architected an End-to-End Test Automation Framework, reducing manual testing efforts by 40% and increasing test coverage by 30%.</li>
-                    <li>Led AWS Cloud Cost Optimization initiative, achieving $1.4M in annual savings without compromising performance.</li>
-                    <li>Designed Smart Test Selection System, reducing build time by 60% by prioritizing critical test cases using ML-driven analysis.</li>
-                    <li>Collaborated with globally distributed teams to enhance CI/CD efficiency, reducing deployment cycle time by 35%.</li>
+                    <li>Architected an <strong>End-to-End Test Automation Framework</strong>, reducing manual testing efforts by 40% and increasing test coverage by 30%.</li>
+                    <li>Led <strong>AWS Cloud Cost Optimization</strong> initiative, achieving $1.4M in annual savings without compromising performance.</li>
+                    <li>Designed <strong>Smart Test Selection</strong> System, reducing build time by 60% by prioritizing critical test cases using ML-driven analysis.</li>
+                    <li>Collaborated with globally distributed teams to enhance <strong>CI/CD efficiency</strong>, reducing deployment cycle time by 35%.</li>
                 </ul>
             </li>
             <li><strong>Senior Software Engineer | Teladoc, Mountain View, CA | 11/2020 - 03/2022</strong>
                 <ul>
-                    <li>Spearheaded test automation for health technology platforms, increasing automation coverage by 30%.</li>
-                    <li>Implemented quality metrics tracking, reducing post-release defects by 25% and improving release stability.</li>
+                    <li>Spearheaded <strong>test automation</strong> for health technology platforms, increasing automation coverage by 30%.</li>
+                    <li>Implemented <strong>quality metrics</strong> tracking, reducing post-release defects by 25% and improving release stability.</li>
                 </ul>
             </li>
             <li><strong>Senior Staff Software Engineer | Visa Inc., Foster City, CA | 12/2014 - 10/2020</strong>
                 <ul>
-                    <li>Led testing efforts for Apple Pay integration, managing cross-functional teams and ensuring seamless transaction processing.</li>
-                    <li>Developed Test Ranking System (TWIK) using ML algorithms, reducing test execution time by 25%.</li>
-                    <li>Pioneered the Auth24x7 Regression Testing Framework, eliminating human errors and reducing operational costs by 20%.</li>
+                    <li>Led testing efforts for <strong>Apple Pay</strong> integration, managing cross-functional teams and ensuring seamless transaction processing.</li>
+                    <li>Developed <strong>Test Ranking System</strong> (TWIK) using ML algorithms, reducing test execution time by 25%.</li>
+                    <li>Pioneered the Auth24x7 <strong>Regression Testing Framework</strong>, eliminating human errors and reducing operational costs by 20%.</li>
                 </ul>
             </li>
             <li><strong>Senior Software Engineer | R S Software (India) Ltd., Kolkata, India | 03/2007 - 11/2014</strong>
                 <ul>
-                    <li>Built robust backend fintech automation frameworks, improving efficiency by 35%.</li>
-                    <li>Ensured strict compliance with international security and payment processing standards.</li>
+                    <li>Built robust <strong>backend fintech automation</strong> frameworks, improving efficiency by 35%.</li>
+                    <li>Ensured strict compliance with international security and <strong>payment processing</strong> standards.</li>
                 </ul>
             </li>
         </ul>
@@ -85,19 +85,19 @@
         <ul>
             <li><strong>Test Automation Framework Development</strong>
                 <ul>
-                    <li>Architected comprehensive cross-platform automation frameworks, reducing manual efforts by 40%.</li>
-                    <li>Integrated CI/CD pipelines with automated testing, accelerating software release cycles.</li>
+                    <li>Architected comprehensive <strong>cross-platform automation frameworks</strong>, reducing manual efforts by 40%.</li>
+                    <li>Integrated <strong>CI/CD pipelines</strong> with automated testing, accelerating software release cycles.</li>
                 </ul>
             </li>
             <li><strong>Engineering Productivity Enhancement Suite</strong>
                 <ul>
-                    <li>Reduced test flakiness by 50% through advanced flaky test management.</li>
-                    <li>Improved test efficiency by 70% with PR tracking automation and static analysis tools.</li>
+                    <li>Reduced <strong>test flakiness</strong> by 50% through advanced flaky test management.</li>
+                    <li>Improved <strong>test efficiency</strong> by 70% with PR tracking automation and static analysis tools.</li>
                 </ul>
             </li>
             <li><strong>Intelligent Test Prioritization System</strong>
                 <ul>
-                    <li>Designed ML-driven ranking system optimizing test execution efficiency, reducing bug escapes by 60%.</li>
+                    <li>Designed <strong>ML-driven ranking system</strong> optimizing test execution efficiency, reducing bug escapes by 60%.</li>
                 </ul>
             </li>
         </ul>
